Deleted comment visibility (finishes issue #15).

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -130,7 +130,7 @@ button, input[type="button"], input[type="submit"]
 		margin: 0.5em
 
 .replies_to_comment
-	padding-left: 2em
+	padding-left: 1.5em
 	border-left = 1px solid !dimborders
 
 form .comment
